--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     git:
       url: git://github.com/FIT-16CLC-InteractionBook/PDFViewer.git
       ref: master
+  webview_flutter: ^0.3.22+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
