update code widget

--- a/assets/book_structure_template.yml
+++ b/assets/book_structure_template.yml
@@ -121,19 +121,18 @@ app:
     #       #           name: "image3"
     #       #           originalImage: assets/image3.jpg
           - object:
-              index: 46f97d0a-8f32-4b89-99a6-28cf3fd7ee48
+              index: 1edb4bcf-daa2-4384-8ae8-b8b6912b52a7
               type: code
-              typeCode: text/x-java
+              typeCode: text/x-c++src
+              theme: material
               coordinates:
-                x: 137
-                y: 93.5
+                x: 100
+                y: 100
                 w: 300
                 h: 300
               dataCode: |-
-                dasdasdsadasdasdasd
-                asdasdasdasdas
-                dasdasdasdasd
-                sadasdasda
+                3123123123213123
+                  12312321312312
     #             # objectActions:
     #             #   - objectAction:
     #             #       index: "1"
