update load code mirror

--- a/assets/book_structure_template.yml
+++ b/assets/book_structure_template.yml
@@ -19,24 +19,24 @@ app:
     - page:
         index: "1"
         objects:
-          - object:
-              index: image-b5ac00b4-7b9a-4231-87d1-cab08fe60c86
-              type: image
-              name: Shiranui.(Onmyouji).full.2544317.png
-              coordinates:
-                x: 0
-                y: 0
-                w: 560
-                h: 300
-              originalImage: "assets/background.jpg"
-              extra:
-                rawWidth: 560
-                rawHeight: 315
-              properties:
-                alpha: 1
-                rotation: 180
-                scale: 1
-              objectActions: []
+          # - object:
+          #     index: image-b5ac00b4-7b9a-4231-87d1-cab08fe60c86
+          #     type: image
+          #     name: Shiranui.(Onmyouji).full.2544317.png
+          #     coordinates:
+          #       x: 0
+          #       y: 0
+          #       w: 560
+          #       h: 300
+          #     originalImage: "assets/background.jpg"
+          #     extra:
+          #       rawWidth: 560
+          #       rawHeight: 315
+          #     properties:
+          #       alpha: 1
+          #       rotation: 180
+          #       scale: 1
+          #     objectActions: []
           # - object:
           #     index: "1" #1 -> n
           #     type: "gallery"
@@ -142,19 +142,19 @@ app:
     #       #           index: "3"
     #       #           name: "image3"
     #       #           originalImage: assets/image3.jpg
-          # - object:
-          #     index: 1edb4bcf-daa2-4384-8ae8-b8b6912b52a7
-          #     type: code
-          #     typeCode: text/x-c++src
-          #     theme: material
-          #     coordinates:
-          #       x: 100
-          #       y: 100
-          #       w: 300
-          #       h: 300
-          #     dataCode: |-
-          #       3123123123213123
-          #         12312321312312
+          - object:
+              index: 1edb4bcf-daa2-4384-8ae8-b8b6912b52a7
+              type: code
+              typeCode: text/x-c++src
+              theme: material
+              coordinates:
+                x: 100
+                y: 100
+                w: 300
+                h: 300
+              dataCode: |-
+                3123123123213123
+                  12312321312312
     #             # objectActions:
     #             #   - objectAction:
     #             #       index: "1"
