--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
       url: git://github.com/FIT-16CLC-InteractionBook/spritewidget.git
       ref: master
   yaml: ^2.2.0
+  http: ^0.12.2
   carousel_slider: ^1.3.0
   union: 0.0.3+1
   just_audio:
@@ -36,7 +37,7 @@ dependencies:
     git:
       url: git://github.com/FIT-16CLC-InteractionBook/PDFViewer.git
       ref: master
-  flutter_inappwebview: ^4.0.0+4
+  webview_flutter: ^0.3.22+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -79,6 +80,7 @@ flutter:
     - assets/test2.mp4
     - assets/1.yml
     - assets/yeuthiyeu.mp3
+    - assets/Codemirror.html
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
