--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   http: ^0.12.2
   carousel_slider: ^1.3.0
   union: 0.0.3+1
-  just_audio:
+  just_audio: ^0.2.0
   rxdart: ^0.24.1
   chewie: 
     git:
