--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   carousel_slider: ^1.3.0
   union: 0.0.3+1
   just_audio: ^0.2.0
+  zoom_widget: ^0.1.3
   rxdart: ^0.24.1
   chewie: 
     git:
